# pymto

./: README.md  dxf-config.json  dxf_energie.json  dxf_swisscom.json  example_new_architecture.py  pyproject.toml
configs/: mgb_gis_plan.json
docs/: API.md  DXF2RVT.extension.md  DXF2RVT.extension_v2.md  FACTORY_IMPACT_ANALYSIS.md
specs/: task.md
src/dxfto/: __init__.py  assigners.py  cli.py  config.py  groupers.py  main.py  models.py  processor.py  protocols.py
src/dxfto/io/: __init__.py  dxf_processor.py  dxf_reader.py  dxf_reader_clean.py  entity_extractor.py  json_exporter.py  landxml_reader.py
src/dxfto/process/: assigners.py  dimension.py  dimension_extractor.py  dimension_mapper.py  entity_handler.py  factory.py  objectdata_factory.py  processor.py  revit_updater.py
src/jrsin/: README.md  __init__.py  data_models.py  parameter_manager.py  revit_creator.py  revit_import_script.py
src/jrsin/DxfImporter.extension/: README.md  __init__.py
src/pymto/: cli.py  config.py  main.py  models.py  processor.py  protocols.py
tests/: __init__.py  conftest.py  test_cli.py  test_dimension_extractor.py  test_dimension_mapper.py  test_dxf_processor.py  test_groupers.py  test_integration.py  test_json_exporter.py  test_models.py  test_text_assigners.py
tests/data/: test_dxf_factory.py  test_entities.dxf  test_factory.py
tests/io/: test_dxf_processor.py  test_dxf_reader.py  test_dxf_reader_clean.py  test_entity_extractor.py  test_landxml_reader.py
tests/process/: __init__.py  test_assigners.py  test_dimension_extractor.py  test_dimension_mapper.py  test_entity_handler.py  test_factory.py  test_gradient_adjuster.py  test_gradient_compatibility.py  test_objectdata_factory.py  test_pipeline_gradient_adjuster.py
tests/sewer_gradient_analysis/: Makefile  README.md  __init__.py  ascii_visualizer.py  conftest.py  show_scenario.py  test_data_generator.py  test_level1_basic.py
(+48 files in other folders)
